# flowlog

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  _typos.toml  deny.toml  release-plz.toml  renovate.json5  taplo.toml
crates/catalog/: Cargo.toml
crates/catalog/src/: arithmetic.rs  atom.rs  compare.rs  error.rs  filter.rs  fn_call.rs  lib.rs  main.rs  predicate.rs  rule.rs
crates/catalog/src/rule/: modify.rs  populate.rs
crates/catalog/tests/: errors.rs
crates/catalog/tests/errors/: unsafe_variable_in_comparison.dl  unsafe_variable_in_negation.dl
crates/common/: Cargo.toml
crates/common/src/: args.rs  config.rs  diag.rs  formatter.rs  lib.rs  source.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: aggregation.rs  arg.rs  build.rs  comm.rs  data_type.rs  dedup.rs  features.rs  fs_utils.rs  ident.rs  import.rs  inspect.rs  io_utils.rs  lib.rs  main.rs  profile.rs  read.rs  relation.rs  relops.rs  scaffold.rs  transformation.rs  udf.rs
crates/compiler/src/aggregation/: avg.rs  common.rs  count.rs  max.rs  min.rs  mod.rs  sum.rs
crates/compiler/src/assembly/: batch.rs  inc.rs  mod.rs
crates/compiler/src/flow/: mod.rs  non_recursive.rs  recursive.rs  transformation.rs
crates/compiler/src/io/: input.rs  mod.rs  output.rs  relops.rs
crates/compiler/src/ty/: data.rs  diff.rs  mod.rs  time.rs
crates/compiler/src/udf/: mod.rs  scalar.rs
crates/compiler/templates/: avg_semiring_rs.tpl  cmd_rs.tpl  max_semiring_rs.tpl  min_semiring_rs.tpl  prompt_rs.tpl  sum_semiring_rs.tpl
crates/executor/: Cargo.toml
crates/executor/src/: args.rs  executor.rs  lib.rs  main.rs
crates/flowlog/: Cargo.toml
crates/flowlog-build/: CHANGELOG.md  Cargo.toml  README.md
crates/flowlog-build/src/: assembly.rs  error.rs  imports.rs  lib.rs  pipeline.rs
crates/flowlog-build/tests/: catalog_errors.rs  parser_errors.rs  planner_errors.rs  stratifier_errors.rs  typechecker_errors.rs
crates/flowlog-compiler/: Cargo.toml  README.md
crates/flowlog-compiler/src/: build.rs  error.rs  imports.rs  lib.rs  main.rs  relation.rs  scaffold.rs
crates/flowlog-compiler/templates/: cmd_rs.tpl
crates/flowlog-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/flowlog-runtime/src/: intern.rs  io.rs  lib.rs  sort.rs  txn.rs
crates/flowlog/src/: io.rs  lib.rs
crates/generator/: Cargo.toml
crates/generator/src/: aggregation.rs  arg.rs  assembly.rs  data_type.rs  dedup.rs  features.rs  fs_utils.rs  generator.rs  ident.rs  import.rs  ingest.rs  inspect.rs  io.rs  io_utils.rs  lib.rs  main.rs  non_recursive_flow.rs  profile.rs  recursive_flow.rs  scaffold.rs  semiring.rs  transformation.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: lib.rs  main.rs  optimizer.rs  plan_tree.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  grammar.pest  lib.rs  main.rs  program.rs  segment.rs  tests.rs
crates/parser/tests/: errors.rs  fixtures.rs
crates/planner/: Cargo.toml
crates/planner/src/: argument.rs  arithmetic.rs  collection.rs  compare.rs  constraint.rs  error.rs  fake_transformation.rs  flow.rs  fn_call.rs  lib.rs  main.rs  rule_planner.rs  stratum_planner.rs  transformation.rs
crates/planner/tests/: errors.rs
crates/stratifier/: Cargo.toml
crates/stratifier/src/: dependency_graph.rs  error.rs  lib.rs  main.rs  stratifier.rs
crates/stratifier/tests/: errors.rs
flowlog-build/: CHANGELOG.md  Cargo.toml
flowlog-build/src/: lib.rs
flowlog-build/src/catalog/: arithmetic.rs  compare.rs  error.rs  filter.rs  fn_call.rs  mod.rs  predicate.rs  rule.rs
flowlog-build/src/codegen/: arg.rs  code_parts.rs  dedup.rs  edb_handles.rs  error.rs  features.rs  idb_buffers.rs  ident.rs  mod.rs  profile.rs  semiring.rs
flowlog-build/src/common/: config.rs  diag.rs  source.rs
flowlog-build/src/optimizer/: core.rs  plan_tree.rs
flowlog-build/src/parser/: desugar.rs  error.rs  grammar.pest  inliner.rs  mod.rs  program.rs
flowlog-build/src/planner/: argument.rs  arithmetic.rs  collection.rs  compare.rs  constraint.rs  error.rs  fn_call.rs  mod.rs  program_planner.rs  rule_planner.rs  stratum_planner.rs  transformation.rs
flowlog-build/src/profiler/: mod.rs  steps.rs
flowlog-build/src/stratifier/: core.rs  dependency_graph.rs  error.rs  mod.rs
flowlog-build/src/typechecker/: error.rs  mod.rs  subtype.rs
flowlog-build/templates/semiring/: avg_int.tpl  sum_float.tpl
flowlog-build/tests/: catalog_errors.rs  parser_errors.rs  planner_errors.rs  stratifier_errors.rs  typechecker_errors.rs
flowlog-build/tests/errors/: mod.rs
flowlog-common/: CHANGELOG.md  Cargo.toml
flowlog-common/src/: config.rs  diag.rs  fmt.rs  hash.rs  lib.rs  source.rs
flowlog-compiler/: Cargo.toml
flowlog-compiler/src/: build.rs  cli.rs  error.rs  imports.rs  lib.rs  main.rs  options.rs  relation.rs  scaffold.rs
flowlog-compiler/src/assembly/: batch.rs  inc.rs  mod.rs
flowlog-compiler/src/io/: input.rs  output.rs
flowlog-compiler/templates/: cmd_rs.tpl  prompt_rs.tpl
flowlog-parser/: CHANGELOG.md  Cargo.toml
flowlog-parser/src/: desugar.rs  error.rs  grammar.pest  inliner.rs  lib.rs  program.rs  segment.rs
flowlog-parser/src/declaration/: attribute.rs  comp.rs  directive.rs  extern_fn.rs  mod.rs  relation.rs
flowlog-parser/src/logic/: aggregation.rs  arithmetic.rs  atom.rs  builtin.rs  comparison.rs  fn_call.rs  head.rs  loop_block.rs  mod.rs  predicate.rs  rule.rs  tuple.rs
flowlog-parser/src/primitive/: const_type.rs  data_type.rs  mod.rs
flowlog-parser/src/program/: display.rs  include.rs  mod.rs  parse.rs  prune.rs  tests.rs
flowlog-profiler/: CHANGELOG.md  Cargo.toml
flowlog-profiler/src/: addr.rs  lib.rs  node.rs  operators.rs  rule.rs  steps.rs
flowlog-runtime/: CHANGELOG.md  Cargo.toml
flowlog-runtime/src/: intern.rs  io.rs  lib.rs
flowlog-visualizer/: Cargo.toml  README.md
flowlog-visualizer/examples/: ops.json
flowlog-visualizer/src/: log.rs  main.rs  ops.rs  render.rs  stats.rs  view.rs
flowlog-visualizer/templates/: report.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
(+1268 files in other folders)
