[workspace]
members = [
    "flowlog-runtime",
    "flowlog-common",
    "flowlog-build",
    "flowlog-compiler",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["FlowLog Maintainers"]
license = "Apache-2.0"
homepage = "https://www.flowlog-rs.com/"
repository = "https://github.com/flowlog-rs/flowlog"

[workspace.dependencies]
clap = "4.5"
codespan-reporting = "0.13"
itertools = "0.15"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0"
thiserror = "2.0"
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
tempfile = "3.0"
pest = "2.8"
pest_derive = "2.8"
ordered-float = "5.1"
educe = "0.6"

# Internal crates
flowlog-common = { path = "flowlog-common", version = "0.1.0" }
