[workspace]
members = [
    "flowlog-runtime",
    "flowlog-common",
    "flowlog-parser",
    "flowlog-build",
    "flowlog-compiler",
    "flowlog-profiler",
    "flowlog-visualizer",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["FlowLog Maintainers"]
license = "Apache-2.0"
homepage = "https://www.flowlog-rs.com/"
repository = "https://github.com/flowlog-rs/flowlog"

[workspace.dependencies]
anyhow = "1.0"
clap = "4.5"
codespan-reporting = "0.13"
differential-dataflow = "0.24"
educe = "0.6"
itertools = "0.15"
lasso = "0.7"
ordered-float = "5.1"
pest = "2.8"
pest_derive = "2.8"
pretty_assertions = "1.4"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.11"
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0"
tempfile = "3.0"
thiserror = "2.0"
timely = "0.30"
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"

# Internal crates.
flowlog-build = { path = "flowlog-build", version = "0.3.4" }
flowlog-common = { path = "flowlog-common", version = "0.1.0" }
flowlog-parser = { path = "flowlog-parser", version = "0.1.0" }
flowlog-profiler = { path = "flowlog-profiler", version = "0.1.0" }
