[package]
name = "flowlog-build"
version = "0.3.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Build-time FlowLog compiler for library mode."
readme = "README.md"
keywords = ["datalog", "dataflow", "compiler", "build-script"]
categories = ["compilers", "database", "development-tools::build-utils"]

[dependencies]
flowlog-common.workspace = true
flowlog-parser.workspace = true
flowlog-profiler.workspace = true

clap = { workspace = true, features = ["derive"] }
codespan-reporting.workspace = true
itertools.workspace = true
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
syn = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true

# Float-keyed codegen (semiring constants).
ordered-float = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tracing-test.workspace = true
