[package]
name = "flowlog-compiler"
version = "0.4.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "flowlog-compiler"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
codespan-reporting.workspace = true
proc-macro2 = { workspace = true }
quote = { workspace = true }
thiserror.workspace = true
toml_edit = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

flowlog-build.workspace = true
flowlog-common = { workspace = true, features = ["clap"] }
flowlog-profiler.workspace = true
