[package]
name = "flowlog-parser"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
flowlog-common.workspace = true

codespan-reporting.workspace = true
educe = { workspace = true }
ordered-float = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
