[package]
name = "flowlog-profiler"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FlowLog profiling model: the plan graph runtime metrics attach to."

[dependencies]
flowlog-common.workspace = true

serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
