[package]
name = "flowlog-runtime"
# The runtime releases on its own cadence — generated code depends on it
# by published version, so any additive change ships as an independent bump.
version = "0.2.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Runtime support crate for FlowLog — re-exports timely/differential-dataflow and provides helpers used by flowlog-build-generated code."
readme = "README.md"
keywords = ["datalog", "dataflow", "differential", "timely"]
categories = ["database", "compilers"]

[dependencies]
differential-dataflow.workspace = true
lasso = { workspace = true, features = ["multi-threaded", "serialize"] }
ordered-float = { workspace = true, features = ["serde"] }
regex.workspace = true
rustc-hash.workspace = true
serde = { workspace = true }
timely.workspace = true

[lints]
workspace = true
