[package]
name = "flowlog-visualizer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

flowlog-profiler.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
