[package]
name = "flowlog-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"

[dependencies.flowlog-common]
path = "../flowlog-common"

[dependencies.flowlog-parser]
path = "../flowlog-parser"

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

# Detach from the parent workspace (whose members are the published crates);
# the fuzz crate is a standalone tool with its own lockfile.
[workspace]
