[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }
tracing.workspace = true