[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
codespan-reporting = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
tempfile = { workspace = true }