[package]
name = "compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "flowlog"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
toml_edit = { workspace = true }

catalog = { path = "../catalog" }
common = { path = "../common" }
optimizer = { path = "../optimizer" }
parser = { path = "../parser" }
planner = { path = "../planner" }
stratifier = { path = "../stratifier" }
profiler = { path = "../profiler" }
