[package]
name = "flowlog-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Build-time FlowLog compiler — emits a typed DatalogBatchEngine to OUT_DIR."

[dependencies]
codespan-reporting.workspace = true
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true

catalog = { path = "../catalog" }
common = { path = "../common" }
optimizer = { path = "../optimizer" }
parser = { path = "../parser" }
planner = { path = "../planner" }
stratifier = { path = "../stratifier" }
profiler = { path = "../profiler" }
typechecker = { path = "../typechecker" }
