[package]
name = "flowlog-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Build-time FlowLog compiler — emits a typed DatalogBatchEngine to OUT_DIR."

[dependencies]
clap = { workspace = true, features = ["derive"] }
codespan-reporting.workspace = true
itertools.workspace = true
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
syn = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true

# Parser grammar (moved from standalone parser crate).
pest = "2.8"
pest_derive = "2.8"
ordered-float = "5.1"

[dev-dependencies]
tempfile.workspace = true
tracing-test.workspace = true
