[package]
name = "flowlog-build"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Build-time FlowLog compiler for library mode."
repository = "https://github.com/flowlog-rs/flowlog"
homepage = "https://www.flowlog-rs.com/"
readme = "README.md"
keywords = ["datalog", "dataflow", "compiler", "build-script"]
categories = ["compilers", "database", "development-tools::build-utils"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
codespan-reporting.workspace = true
itertools.workspace = true
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
syn = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true

# Parser grammar.
pest = "2.8"
pest_derive = "2.8"
ordered-float = "5.1"

[dev-dependencies]
tempfile.workspace = true
tracing-test.workspace = true
