[package]
name = "flowlog-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "flowlog-compiler"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
codespan-reporting.workspace = true
proc-macro2 = { workspace = true }
quote = { workspace = true }
thiserror.workspace = true
toml_edit = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

flowlog-build = { path = "../flowlog-build" }
