[package]
name = "flowlog-runtime"
# Explicit version (not `version.workspace = true`) because the runtime
# releases on its own cadence — generated code depends on it by
# published version, so any additive change ships as an independent bump.
version = "0.2.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Runtime support crate for FlowLog — re-exports timely/differential-dataflow and provides helpers used by flowlog-build-generated code."
repository = "https://github.com/flowlog-rs/flowlog"
readme = "README.md"
keywords = ["datalog", "dataflow", "differential", "timely"]
categories = ["database", "compilers"]

[dependencies]
timely = "0.30"
differential-dataflow = "0.24"
ordered-float = { version = "5.0", features = ["serde"] }
lasso = { version = "0.7", features = ["multi-threaded", "serialize"] }
regex = "1.0"
rustc-hash = "2.0"
serde = { workspace = true }
