[package]
name = "flowlog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
timely = "0.28"
differential-dataflow = "0.22"
ordered-float = { version = "5", features = ["serde"] }
lasso = { version = "0.7", features = ["multi-threaded", "serialize"] }
serde = { version = "1", features = ["derive"] }
