[package]
name = "generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4.5.15", features = ["derive"] }

common = { path = "../common" }
catalog = { path = "../catalog" }
planner = { path = "../planner" }
parser = { path = "../parser" }
stratifier = { path = "../stratifier" }
optimizer = { path = "../optimizer" }
