[package]
name = "optimizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }

common = { path = "../common" }
catalog = { path = "../catalog" }
parser = { path = "../parser" }
stratifier = { path = "../stratifier" }