[package]
name = "parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4.5.15", features = ["derive"] }

args = { path = "../args" }

# Parser-specific dependencies
pest = "2.8"
pest_derive = "2.8"
