[package]
name = "planner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }

catalog = { path = "../catalog" }
common = { path = "../common" }
optimizer = { path = "../optimizer" }
parser = { path = "../parser" }
profiler = { path = "../profiler" }
stratifier = { path = "../stratifier" }
