[package]
name = "stratifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
itertools.workspace = true
clap = { version = "4.5.15", features = ["derive"] }

common = { path = "../common" }
parser = { path = "../parser" }
